# Remove product from cart and assert empty cart message
appId: com.proyecto_final_miso.vendedoresmovil
---
- launchApp
- runFlow: add-product-to-cart.yml
- waitForAnimationToEnd
- tapOn:
    id: "product-row-.*"
    index: 0
- assertVisible:
    id: "remove-product-.*"
- tapOn:
    id: "remove-product-.*"
- assertVisible:
    id: "empty-cart-message"
